--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                     <h1>Angular Advanced</h1>
                     <h2>Educacion IT</h2>
                     <h4>Ing. Andres Otaduy</h4>
+                    andreseninternet@hotmail.com
                 </section>
 
                 <section data-markdown>
